# better-shot

./: CONTRIBUTING.md  README.md  package.json
.github/workflows/: release.yml
bettershot-landing/lib/: downloads.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: ImageEditor.tsx  UpdateDialog.tsx
src/components/ui/: dialog.tsx  slider.tsx
src/hooks/: index.ts  useEditorState.ts  useHistory.ts
