[package]
name = "bettershot"
version = "0.1.6"
description = "A Better Shot App"
authors = ["kartik labhshetwar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The lib name matches the package name to allow `bettershot::run()` usage
# On Windows, if there's a conflict with bin name, we can add `_lib` suffix
name = "bettershot"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dirs = "5"
image = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-screenshots = "2"
tauri-plugin-store = "2"
xcap = "0.8"

